--- a/css/main.css
+++ b/css/main.css
@@ -1,41 +1,36 @@
 /* FONTS */
 /* --------------------------------------------------------------------------------------------------------- */
 @font-face{
-    font-family: RocGrotesk-Bold;
-    src: url(../fonts/Fontspring-DEMO-rocgrotesk-bold.otf)
+    font-family: Satoshi-Regular;
+    src: url(../fonts/SatoshiVariable/Satoshi-Regular.otf);
 }
 
 @font-face{
-    font-family: RocGrotesk-Regular;
-    src: url(../fonts/Fontspring-DEMO-rocgrotesk-regular.otf)
+    font-family: Satoshi-Medium;
+    src: url(../fonts/SatoshiVariable/Satoshi-Medium.otf);
 }
 
 @font-face{
-    font-family: RocGrotesk-Light;
-    src: url(../fonts/Fontspring-DEMO-rocgrotesk-light.otf)
+    font-family: Satoshi-Bold;
+    src: url(../fonts/SatoshiVariable/Satoshi-Bold.otf);
 }
 
-@font-face {
-    font-family: Inter-Bold;
-    src: url(/fonts/Inter-Bold.ttf);
-}
-
-@font-face {
-    font-family: Inter-Regular;
-    src: url(/fonts/Inter-Regular.ttf);
-}
-
-@font-face {
-    font-family: TT-Travels-Black;
-    src: url(../fonts/TT_Travels/TT\ Travels\ Next\ Trial\ Black.ttf);
+@font-face{
+    font-family: Satoshi-Black;
+    src: url(../fonts/SatoshiVariable/Satoshi-Black.otf);
 }
 
 
 /* ---------------------------------------------------------------------------------------------------------- */
 body{
-    font-family: RocGrotesk-Regular;
-    font-size: 24px;
+    font-family: Satoshi-Regular;
+    /* font-size: 24px; */
     background-color: #E4ECF3;
+}
+
+a, a:visited{
+    text-decoration: none;
+    margin: -2px 0;
 }
 
 /* ANIMATIONS */
@@ -187,11 +182,28 @@ background: #555;
     height: 50px;
     margin: 1%;
     text-align: center;
-    font-family: Inter-Bold;
+    font-family: Satoshi-Medium;
     font-size: 16px;
     border-radius: 9px;
     background-color: rgba(104, 104, 104, 0.11);
     border: none;
+}
+
+.form-input{
+    width: 58%;
+    height: 50%;
+    font-size: 16px;
+    padding: 10px;
+    font-family: Satoshi-Medium;
+    margin: 10px 0;
+    border: solid 1px #898A8D;
+    border-radius: 4px;
+    text-align: center;
+}
+
+.input-title{
+    text-align: left !important;
+    
 }
 
 ::placeholder {
@@ -342,21 +354,6 @@ label{
     color: #0b528b;
 }
 
-#suggestedUsername2{
-    font-size: 12px;
-    padding: 3px;
-    padding-bottom: 8px;
-    color: #378ace;
-    transition: 0.2s ease;
-    font-weight: 600;
-    cursor: pointer;
-    font-family: Inter-Regular;
-}
-
-#suggestedUsername2:hover{
-    color: #0b528b;
-}
-
 #suggestedUsername3{
     font-size: 12px;
     padding: 5px;
@@ -375,136 +372,163 @@ label{
 
 /* DASHBOARD */
 /* ----------------------------------------------------------------------------------------------------------- */
-/* MAIN CONTEXT */
-.container{
-    margin: 20px;
-}
-
-.title{
-    font-family: RocGrotesk-Bold;
-    font-size: 45px;    
-}
 
 /* Side Navigation */
 /* ---------------------------------------------------------------------------------------------------------- */
-
-/* Tooltip container */
-.tooltip {
-    position: relative;
-}
-  
-/* Tooltip text */
-.tooltip .tooltiptext {
-    visibility: hidden;
-    width: 120px;
-    background-color: #ffffff;
-    color: #555;
-    text-align: center;
-    padding: 5px 2px;
-    border-radius: 6px;
-    box-shadow: 6px 4px 10px rgb(102, 102, 102);
-
-    /* Position the tooltip text */
-    position: absolute;
-    z-index: 1;
-    bottom: 15%;
-    left: 150%;
-    margin-left: -60px;
-
-    /* Fade in tooltip */
-    opacity: 0;
-    transition: opacity 0.3s;
-    font-size: 12px;
-    font-family: RocGrotesk-Regular;
-}
-  
-/* Tooltip arrow */
-.tooltip .tooltiptext::after {
-    content: " ";
-    position: absolute;
-    top: 50%;
-    right: 100%; /* To the left of the tooltip */
-    margin-top: -5px;
-    border-width: 5px;
-    border-style: solid;
-    border-color: transparent #ffffff transparent transparent;
-}
-  
-  /* Show the tooltip text when you mouse over the tooltip container */
-.tooltip:hover .tooltiptext {
-    visibility: visible;
-    opacity: 1;
-}
-
-/* ---------------------------------------------------------------------------------------------------------- */
-.sidenavIcon {
-    width: 26px;
-    height: 26px;
-    text-decoration: none !important;
-    padding: 10px 12px 10px 12px;
-    text-decoration: none;
-    display: block;
-    margin: 1%;
-    margin-left: 7px;
-    margin-right: 15px;
-    margin-bottom: 5px;
-    transition: 0.2s ease;
-    opacity: 100%;
-}
-
-.sidenavIcon:hover {
-    background: #2574b534;
-    border-radius: 5px;
-    opacity: 100%;
-}
-
-.logout{
-    margin-top: 420%;
-    background-color: #d9d9d9;
-    border-radius: 6px;
-}
-
-.sideNav{
+.sidenav{
     height: 100%;
-    width: fit-content;
+    width: 230px;
     position: fixed;
-    z-index: 1;
     top: 0;
     left: 0;
-    background: #ffffff;
+    background: #FFFFFF;
     padding-top: 20px;
-    box-shadow: 4px 7px 27px #0000004f;
-    border-top-right-radius: 12px;
+}
+
+.sidenav-logo{
+    height: 80px;
+    display: block;
+    padding-left: 20px;
+}
+
+.sidenav-button{
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 50px;
+    transition: ease 0.5s;
+    display: flex;
+    flex-direction: row;
+    vertical-align: middle;
+    cursor: pointer;
+}
+
+.sidenav-button:hover{
+    background: #898A8D23;
+}
+
+.sidenav-icon{
+    width: 20px;
+    height: 20px;
+    display: inline;
+    vertical-align: middle;
+    cursor: pointer;
+    /* margin: 18px 0 6px 0; */
+}
+
+.sidenav-text{
+    font-size: 16px;
+    margin: -1px 0 0 0;
+    padding: 0 0 0 8px;
+    font-family: Satoshi-Medium;
+    color: #374957;
+    cursor: pointer;
+}
+
+.logout-button{
+    margin-top: 140px;
+    background-color: #F0F0F0;
+    margin-left: 30px;
+    margin-right: 30px;
+    padding: 14px 0 14px 40px;
+    transition: ease 0.5s;
+    display: flex;
+    flex-direction: row;
+    vertical-align: middle;
+    border-radius: 8px;
 }
 
 /* MAIN PAGE */
 /* ---------------------------------------------------------------------------------------------------------- */
 .main{
-    margin-left: 100px;
-    padding: 0px 10px;
+    margin-left: 260px;
+    padding: 10px 0 0 0;
 }
 
-.top{
-    display: flex;
+.title{
+    font-size: 28px;
+    font-family: Satoshi-Bold;
+    letter-spacing: -1px;
+    padding-top: 10px;
+    display: inline;
+    vertical-align: middle;
+    color: #374957;
 }
 
-.logo{
-    width: 200px;
-    height: 98.36px;
-    object-fit: fill;
+.talkToAgent{
     float: right;
-    margin-top: -120px;
-    margin-right: -20px;
+    padding: 6px 24px 0 0;
+    margin: 0 0 0 10px;
+    font-family: Satoshi-Medium;
+    letter-spacing: -1px;
+    color: #374957;
+    font-size: 18px;
+}
+
+.talkToAgent-icon{
+    width: 18px;
+    height: 18px;
+    display: inline;
+    vertical-align: middle;
+    cursor: pointer;
 }
 
 /* DASHBOARD */
 /* ---------------------------------------------------------------------------------------------------------- */
-.dashboard{
-    background-color: #2573B5;
-    padding: 60px;
-    color: #ffffff;
-    border-radius: 32px;
-    transition: 0.2s ease;
+.jumbotron{
+    background-color: #00457A;
+    padding: 30px;
+    color: #FFFFFF;
+    margin: 36px 24px 30px 0;
+    border-radius: 8px;
+    text-align: center;
+    display: flex;
+    font-family: Satoshi-Regular;
+}
+
+.jumbotron-left{
+    flex: 1;
+    display: grid;
+    text-align: left;
+    position: relative;
+}
+
+.jumbotron-right{
+    flex: 1;
+    float: right;
+    justify-content: end;
+    align-items: center;    
+    /* padding: 20px; */
+}
+
+.salutation{
+    /* position: absolute; */
+    top: 0;
+    left: 0;
+}
+
+#greeting, #firstname{
+    font-size: 28px;
+    font-family: Satoshi-Bold;
+}
+
+#username{
+    font-size: 18px;
+    color: #FFFFFF7F;
+}
+
+.balance-title{
+    font-size: 16px;
+    font-family: Satoshi-Regular;
+    color: #FFFFFF7F;
+}
+
+.balance{
+    /* position: absolute; */
+    bottom: 0;
+    left: 0;
+    margin: 100px 0 0 0 ;
+    font-family: Satoshi-Bold;
+    font-size: 28px;
 }
 
 .dashboard:hover{
@@ -526,235 +550,209 @@ label{
     margin-top: 15px;
 }
 
-/* ACCOUNT BALANCE */
-/* ---------------------------------------------------------------------------------------------------------- */
-.accBal{
-    margin-top: 20%;
-}
-
-#acctBalTitle{
-    color: #ffffff6b;
-    /* font-size: 14px; */
-}
-
-.acctBalFigure{
-    font-family: Inter-Bold;
-    font-size: 56px;
-    line-height: 0;
-    display: block;
-    margin-top: 30px;
-}
 /* ACCOUNT NUMBER AND OTHER INFO */
 /* ---------------------------------------------------------------------------------------------------------- */
-.acctinfo{
-    float: right;
-    background-color: #072844;
-    padding: 12px 42px 12px 42px;
-    border-radius: 18px;
-    margin-top: -100px;
-    margin-right: -20px;
-    text-align: right;
-    transition: 0.2s ease;
-}
-
-.acctinfo:hover{
+.account-info{
     background-color: #02182c;
+    padding: 30px;
+    margin-left: 38%;
+    justify-content: right;
+    align-items: center;
+    display: flex;
+    border-radius: 8px;
+    width: 50%;
+    height: 5%;
 }
 
-#userAcctNum{
-    font-family: Inter-Bold;
-    font-size: 36px;
-    line-height: 0;
+.account-text{
+    padding: 20px;
+    text-align: end;
 }
 
-#acctInfoTitle{
-    font-size: 14px;
-    line-height: 0;
-    color: #ffffff49;
-    /* margin-bottom: 5px; */
+.accnumber-title{
+    font-size: 12px;
+    font-family: Satoshi-Regular;
+    color: #FFFFFF7F;
 }
 
-#acctInfoPic{
-    width: 50px;
-    height: 50px;
+#account-number{
+    font-family: Satoshi-Bold;
+    font-size: 22px;
+}
+
+.user-img{
+    width: 40px;
+    height: 40px;
     border-radius: 50%;
-    margin-top: 10px;
 }
 
-#acctNum{
-    font-family: Inter-Bold;
-    font-size: 28px;
-    padding-right: 20px;
-    line-height: 0;
-    color: white;
-    padding-top: 40px;
-}
-
-#acctNumTitle{
-    font-size: 16px;
-    padding-right: 20px;
-    line-height: 0;
-    color: #ffffff4f;
-}
-
-
-#transactionHistory {
-    border-collapse: collapse;
-    border-spacing: 0;
-    width: 100%;
-    border: 1px solid #ddd;
-    font-size: 18px;
-    border-style: none;
-}
-
-
-th {
-    font-family: RocGrotesk-Regular;
-    text-align: left;
-    padding: 16px;
-    border-bottom: solid 1px black;
-    background-color: #02182c;
-    color: white;
-    font-size: 16px
-}
-
-table{
-    width: 100%;
-}
-
-td{
-    padding: 16px;
-    font-family: Inter-Regular;
-}
-
-tr:nth-child(even) {
-    background-color: #f2f2f2;
-}
-
-.cr{
-    color: rgb(6, 167, 14);
-    font-weight: bold;
-    font-family: Inter-Bold;
-}
-
-.dr{
-    color: rgb(167, 6, 6);
-    font-weight: bold;
-    font-family: Inter-Bold;
-}
-
-.transactAcctNum{
-    font-family: Inter-Bold;
-    padding-top: 5px;
-    color: #055496;
-}
 
 /* TRANSFER */
 /* ---------------------------------------------------------------------------------------------------------- */
 .transfer{
-    /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); */
-    padding: 4%;
-    text-align: left;
-    background-color: #ffffff;
-    border-radius: 20px;
-    /* z-index: -1; */
-    width: 700px;
-    height: 400px;
-    float: left;
-    /* margin-top: 30px; */
-    margin-right: 6px;
-    margin-bottom: 2%;
-    font-size: 18px;
-}
-
-.transferInfoMe{
-    padding: 4%;
-    text-align: center;
-    background-color: #ffffff;
-    border-radius: 20px;
-    /* z-index: -1; */
-    width: 260px;
-    height: 142px;
-    float: right;
-    /* margin-top: 30px; */
-    /* margin-right: 100px; */
-    margin-bottom: 2%;
-    font-size: 18px;
-}
-
-.transferButton{
-    margin-top: 20px;
-    padding: 15px;
-    width: 300px;
-    color: white;
-    background-color: #055496;
+    background-color: #FFFFFF;
+    padding: 80px;
+    color: #374957;
+    margin: 32px 24px 10px 0;
     border-radius: 8px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: left;
+}
+
+
+#initialize-transfer{
+    width: 60%;
+    padding: 12px 90px;
+    background-color: #00457A;
     border-style: none;
-    font-family: RocGrotesk-Bold;
-    font-size: 18px;
-    transition: ease 0.2s;
-}
-
-.transferButton:hover{
-    background-color: #023c6b;
-}
-
-
-
-#balance{
-    font-family: Inter-Bold;
-    position: absolute;
-    bottom: 0;
-    padding-bottom: 10px;
-    padding-right: 70px;
-    right: 0;
-    font-size: 32px;
-}
-
-/* PAGINATION */
-/* ---------------------------------------------------------------------------------------------------------- */
-.paginationTab{
-    float: right;
-    font-family: Inter-Regular;
-    margin: 20px -10px 40px 0;
-    padding: 15px;
-    border-radius: 10px;
-    font-size: 14px;
-    
-}
-
-.paginationButton:nth-child(even){
-    background-color: #1f1a1ad3;
-}
-
-.paginationButton:first-child{
-    border-top-left-radius: 5px;
-    border-bottom-left-radius: 5px;
-}
-
-.paginationButton:last-child{
-    border-top-right-radius: 5px;
-    border-bottom-right-radius: 5px;
-}
-
-.paginationButton{
-    background-color: #ffffff;
-    border: solid 1px #c2c2c2d8;
-    padding: 15px;
-    margin: -2.5px;
-    transition: ease 0.2s;
-    color: #055496;
-}
-
-.paginationButton:hover{
-    background-color: #f1f1f1;
-    font-family: Inter-Bold;
-}
-
-#receipientAccNo{
-    color: #378ace;
-    font-family: RocGrotesk-Bold;
+    font-family: Satoshi-Bold;
     font-size: 16px;
-    padding-top: 10px;
-    padding-left: 30px;
+    color: #FFFFFF;
+    border-radius: 4px;
+}
+
+
+/* TRANSACTION HISTORY */
+/* ---------------------------------------------------------------------------------------------------------------*/
+.acc-info{
+    background-color: #00457A;
+    padding: 80px;
+    color: #FFFFFF;
+    margin: 36px 24px 10px 0;
+    border-radius: 8px;
+    text-align: center;
+}
+
+.acc-number{
+    font-size: 28px;
+}
+
+#acc-balance{
+    font-size: 48px;
+    font-family: Satoshi-Black;
+}
+
+#txn-history{
+    background-color: #FFFFFF;
+    padding: 80px;
+    color: #374957;
+    margin: 32px 24px 10px 0;
+    border-radius: 8px;
+    text-align: center; 
+    display: grid;
+    place-items: center;
+}
+
+#txn-history-options{
+    width: 82%;
+    padding: 12px;
+    font-size: 16px;
+    font-family: Satoshi-Regular;
+    color: #374957;
+    border-radius: 2px;
+}
+
+#txn-history-container{
+    width: 100%;
+    box-sizing: border-box;
+    margin: 0 0 0 150px;
+}
+
+#recent-txn-history-container{
+    width: 100%;
+    box-sizing: border-box;
+    /* padding: 0 0 0 5px; */
+}
+
+
+/* Dashboard Recent Transactions Cards */
+.recent-txn-card{
+    margin: 20px 0;
+    background: #37495723;
+    width: 96%;
+    text-align: center;
+    display: flex;
+    border-radius: 12px;
+    padding: 5px;
+}
+
+/* Transactions History Cards */
+.txn-card{
+    margin: 30px 0;
+    background: #37495723;
+    width: 81%;
+    text-align: center;
+    display: flex;
+    border-radius: 12px;
+    padding: 10px;
+}
+
+.txn-card-right{
+    flex: 1;
+    float: right;
+    justify-content: end;
+    align-items: center;    
+    padding: 20px;
+    display: flex; 
+}
+
+.txn-card-left{
+    flex: 1;
+    display: grid;
+    text-align: left;
+    padding: 20px;
+}
+
+#date-of-txn{
+    font-size: 12px;
+    font-weight: 600;
+    text-transform: uppercase;
+}
+
+#txn-account-name{
+    font-family: Satoshi-Bold;
+    font-size: 18px;
+}
+
+.horizontal{
+    display: flex;
+}
+
+#txn-username{
+    padding: 0 5px 0 0;
+}
+
+#txn-account-number{
+    color: #2573B5;
+    font-family: Satoshi-Black;
+}
+
+#txn-amount{
+    font-family: Satoshi-Black;
+    padding: 0 10px;
+}
+
+#txn-type-credit{
+    background-color: #3AB86C;
+    padding: 8px;
+    margin: 0 6px 0 12px;
+    text-transform: uppercase;
+    font-family: Satoshi-Bold;
+    color: #FFFFFF;
+    border-radius: 4px;
+    font-size: 10px;
+}
+
+#txn-type-debit{
+    background-color: #E14942;
+    padding: 8px;
+    margin: 0 4px;
+    text-transform: uppercase;
+    font-family: Satoshi-Bold;
+    color: #FFFFFF;
+    border-radius: 4px;
+    font-size: 10px;
 }
